--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,10 @@ ul p {
 }
 
 .list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-bottom: 72px;
   padding: 0;
   margin: 0;
   color: var(--title-text-color);
@@ -225,7 +229,15 @@ ul p {
 }
 /*Portfolio*/
 
+.portfolio-main {
+  padding-top: 96px;
+  padding-bottom: 120px;
+}
+
 .list .filter-btn {
+  border-radius: 4px;
+  padding: 12px 24px;
+  border: 1px solid #e7e9fc;
   color: var(--blue-color);
   font-family: "Roboto", sans-serif;
   font-style: normal;
@@ -238,6 +250,7 @@ ul p {
 }
 .list .filter-btn:hover,
 .list .filter-btn:focus {
+  border: 1px solid transparent;
   color: var(--second-white-color);
   background-color: var(--background-button);
 }
