--- a/css/styles.css
+++ b/css/styles.css
@@ -304,6 +304,12 @@ ul p {
   background-color: var(--primary-text-color);
 }
 
-.img-style {
+.image-person {
   display: block;
+}
+.portfolio-flex {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  margin-bottom: 8px;
 }
