--- a/css/styles.css
+++ b/css/styles.css
@@ -24,12 +24,7 @@ body {
 
   background-color: var(--second-white-color);
 }
-h1,
-h2,
-h3,
-ul p {
-  margin: 0;
-}
+
 .container {
   width: 1158px;
   margin-left: auto;
@@ -73,11 +68,8 @@ ul p {
 
 .list {
   display: flex;
-  justify-content: center;
   gap: 24px;
   margin-bottom: 72px;
-  padding: 0;
-  margin: 0;
   color: var(--title-text-color);
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -89,6 +81,7 @@ ul p {
 .auth-nav {
   display: flex;
   margin-left: auto;
+  gap: 40px;
 }
 
 .adress-item:first-child {
@@ -180,7 +173,7 @@ ul p {
 
 /* Section */
 .section-title {
-  margin-bottom: 72px;
+  margin-bottom: 8px;
   padding-bottom: 120px;
   padding-top: 120px;
   text-align: center;
@@ -194,7 +187,12 @@ ul p {
   text-transform: capitalize;
 }
 .section-team {
+  padding: 120px 0;
   background-color: var(--white-footer-color);
+}
+
+.section-container {
+  padding: 120px 0;
 }
 .workers-title {
   width: calc((100% - 72px) / 4);
@@ -304,6 +302,16 @@ ul p {
   background-color: var(--primary-text-color);
 }
 
-.img-style {
+.image-person {
   display: block;
+}
+.portfolio-flex {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  margin-bottom: 8px;
+}
+
+.main-advantages {
+  padding: 188px 0;
 }
