--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,7 @@ body {
   background-color: var(--primary-text-color);
 }
 
-.image-person {
+.img-style {
   display: block;
 }
 .portfolio-flex {
