--- a/css/styles.css
+++ b/css/styles.css
@@ -210,6 +210,7 @@ body {
 }
 .text {
   display: flex;
+  text-align: center;
   color: var(--title-text-color);
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -218,6 +219,8 @@ body {
   background-color: var(--second-white-color);
 }
 .title-text {
+  text-align: center;
+  margin-bottom: 8px;
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -310,4 +313,8 @@ body {
   border: 1px solid #e7e9fc;
   border-top: none;
   margin-bottom: 8px;
+}
+
+.container-name {
+  padding: 32px 16px;
 }
