--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@ body {
 .list {
   display: flex;
   gap: 24px;
+  justify-content: center;
   margin-bottom: 72px;
   color: var(--title-text-color);
   font-family: "Roboto", sans-serif;
@@ -266,7 +267,7 @@ body {
   flex-wrap: wrap;
 }
 .flex-element {
-  width: 360px;
+  width: calc((100% - 48px) / 3);
 }
 
 .section-title {
@@ -309,6 +310,10 @@ body {
   display: block;
 }
 .portfolio-flex {
+  display: flex;
+  row-gap: 48px;
+  flex-wrap: wrap;
+  column-gap: 24px;
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
@@ -317,4 +322,10 @@ body {
 
 .container-name {
   padding: 32px 16px;
+}
+
+.container-flex {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
