--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body {
   padding-right: 15px;
 }
 
-.main-nav {
+.container .main-nav {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #e7e9fc;
@@ -266,7 +266,7 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
-.flex-element {
+.container-flex {
   width: calc((100% - 48px) / 3);
 }
 
@@ -328,4 +328,13 @@ body {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
+  margin-bottom: 8px;
+}
+
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.flex-element {
+  width: calc((100% - 48px) / 3);
 }
