--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,8 @@ body {
 
 /* Section */
 .section-title {
-  margin-bottom: 8px;
+  margin-bottom: 72px;
+  justify-content: center;
   padding-bottom: 120px;
   padding-top: 120px;
   text-align: center;
@@ -270,9 +271,6 @@ body {
 .section-title {
   display: flex;
 }
-.workers-title {
-  width: calc((100%-72px) / 4);
-}
 
 /* Footer */
 
@@ -334,4 +332,12 @@ body {
 
 .flex-element {
   width: calc((100% - 48px) / 3);
+}
+
+.main-advantages {
+  padding: 120px 0 120px;
+}
+
+.advantages-item {
+  width: calc((100% - 72px) / 4);
 }
