--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,7 @@ body {
 .hero-title {
   margin-top: 0;
   margin-bottom: 48px;
+  max-width: 496px;
   color: var(--second-white-color);
   font-family: "Roboto", sans-serif;
   font-style: 700;
