--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,8 @@ body {
 }
 
 .container {
+  display: flex;
+  border-bottom: 1px solid #e7e9fc;
   width: 1158px;
   margin-left: auto;
   margin-right: auto;
@@ -131,6 +133,10 @@ body {
 .header-text:hover,
 .header-text:focus {
   color: var(--background-button);
+}
+
+.main-header {
+  border-bottom: 1px solid #e7e9fc;
 }
 
 /* Hero */
