--- a/css/styles.css
+++ b/css/styles.css
@@ -26,8 +26,6 @@ body {
 }
 
 .container {
-  display: flex;
-  border-bottom: 1px solid #e7e9fc;
   width: 1158px;
   margin-left: auto;
   margin-right: auto;
@@ -69,12 +67,7 @@ body {
 }
 
 .list {
-  display: flex;
-  gap: 24px;
-  justify-content: center;
-  margin-bottom: 72px;
   color: var(--title-text-color);
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -214,9 +207,7 @@ body {
   flex-wrap: wrap;
   gap: 10px;
 }
-.advantages .item {
-  width: 264px;
-}
+
 .text {
   display: flex;
   text-align: center;
@@ -316,8 +307,6 @@ body {
   row-gap: 48px;
   flex-wrap: wrap;
   column-gap: 24px;
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
   border-top: none;
   margin-bottom: 8px;
 }
@@ -347,4 +336,16 @@ body {
 
 .advantages-item {
   width: calc((100% - 72px) / 4);
+}
+
+.secondary-title {
+  display: flex;
+  gap: 24px;
+}
+
+.portfolio-title {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-bottom: 72px;
 }
