--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,6 @@ body {
   margin-right: 40px;
 }
 .adress-item {
-  display: flex;
   color: var(--title-text-color);
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -103,7 +102,6 @@ body {
 .site-nav {
   display: flex;
   margin-left: 76px;
-  padding: 24px 0;
 }
 .site-nav .link {
   margin-right: 40px;
@@ -314,6 +312,11 @@ body {
 
 .container-name {
   padding: 32px 16px;
+  padding-left: 16px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .container-flex {
