--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body {
   padding-right: 15px;
 }
 
-.container .main-nav {
+.main-nav {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #e7e9fc;
@@ -368,4 +368,8 @@ body {
   display: flex;
   gap: 24px;
   padding-left: 0;
+}
+
+.header-text {
+  padding: 24px 0;
 }
