--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ body {
   letter-spacing: 0.02;
 }
 
-.auth-nav {
+.tel-mailto {
   display: flex;
   gap: 40px;
 }
@@ -187,6 +187,7 @@ body {
   text-transform: capitalize;
 }
 .section-team {
+  padding: 120px 0;
   background-color: var(--white-footer-color);
 }
 
@@ -364,4 +365,11 @@ body {
 
 .header-text {
   padding: 24px 0;
+}
+.main-advantages {
+  padding: 120px 0 120px;
+}
+
+.section-container {
+  padding: 120px 0;
 }
