--- a/css/styles.css
+++ b/css/styles.css
@@ -100,16 +100,6 @@ a {
   list-style: none;
 }
 
-.list {
-  margin: 0;
-  padding: 0;
-  color: var(--title-text-color);
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  list-style: none;
-}
-
 .auth-nav {
   display: flex;
   gap: 40px;
@@ -206,7 +196,6 @@ a {
 
 /* Section */
 .section-title {
-  margin: 0;
   margin-bottom: 72px;
   justify-content: center;
   text-align: center;
@@ -285,12 +274,9 @@ a {
   flex-wrap: wrap;
 }
 
-.section-title {
-  display: flex;
-}
-
 /* Footer */
 .footer-text {
+  margin-top: 16px;
   max-width: 264px;
   color: var(--white-footer-color);
   font-family: "Roboto", sans-serif;
@@ -323,7 +309,6 @@ a {
   flex-wrap: wrap;
   column-gap: 24px;
   border-top: none;
-  margin-bottom: 8px;
 }
 
 .container-name {
@@ -333,13 +318,13 @@ a {
   border-top-right-radius: 0;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
+  text-align: center;
 }
 
 .container-flex {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-  margin-bottom: 8px;
 }
 
 .header {
@@ -391,7 +376,7 @@ a {
 }
 
 .section-container {
-  padding border-bottom: 120px;
+  padding-bottom: 120px;
 }
 
 .address-nav {
